сделан перевод попапа быстрых настроек

--- a/public/locales/en/headerMenu.json
+++ b/public/locales/en/headerMenu.json
@@ -2,5 +2,6 @@
   "map": "Map",
   "facts": "Facts",
   "volunteers": "Volunteers",
-  "aboutUs": "About Us"
+  "aboutUs": "About Us",
+  "signIn": "Sign In"
 }
