--- a/public/locales/id/headerMenu.json
+++ b/public/locales/id/headerMenu.json
@@ -2,5 +2,6 @@
   "map": "Peta",
   "facts": "Fakta",
   "volunteers": "Relawan",
-  "aboutUs": "Tentang Kami"
+  "aboutUs": "Tentang Kami",
+  "signIn": "Masuk"
 }
