--- a/public/locales/ru/headerMenu.json
+++ b/public/locales/ru/headerMenu.json
@@ -2,5 +2,6 @@
   "map": "Карта",
   "facts": "Факты",
   "volunteers": "Волонтеры",
-  "aboutUs": "О нас"
+  "aboutUs": "О нас",
+  "signIn": "Войти"
 }
