переведены ошибки валидации

--- a/public/locales/en/addPostPopup.json
+++ b/public/locales/en/addPostPopup.json
@@ -7,5 +7,7 @@
   "isItDirty": "Is it Dirty?",
   "itIsDirty": "Yes",
   "itIsNotDirty": "No",
-  "publish": "Post"
+  "publish": "Post",
+  "titleValidation": "Title must be longer than 5 symbols",
+  "commentValidation": "Comment must be longer than 5 symbols"
 }
