--- a/public/locales/ru/registerPopup.json
+++ b/public/locales/ru/registerPopup.json
@@ -9,5 +9,9 @@
   "registerWithGoogle": "Зарегистрироваться с Google",
   "agreement": "Регистрируясь, вы принимаете условия соглашения",
   "alreadyRegistered": "Уже зарегистрированы?",
-  "signIn": "Войти"
+  "signIn": "Войти",
+  "nameValidation": "Имя должно быть длиннее 5 символов",
+  "emailValidation": "Это не действительный адрес электронной почты",
+  "passwordValidation": "Пароль должен быть длиннее 8 символов"
+
 }
