--- a/public/locales/ru/addPostPopup.json
+++ b/public/locales/ru/addPostPopup.json
@@ -7,5 +7,8 @@
   "isItDirty": "Грязно?",
   "itIsDirty": "Да",
   "itIsNotDirty": "Нет",
-  "publish": "Опубликовать"
+  "publish": "Опубликовать",
+  "titleValidation": "Заголовок должен быть длиннее 5 символов",
+  "commentValidation": "Комментарий должен быть длиннее 5 символов"
+
 }
