--- a/public/locales/en/profile.json
+++ b/public/locales/en/profile.json
@@ -1,6 +1,7 @@
 {
   "yourData": "Your data",
   "changePhoto": "Change",
+  "addPhoto": "Add photo",
   "deletePhoto": "Delete",
   "nickname": "Your nickname. Other users will see it",
   "name": "Name",
@@ -14,7 +15,7 @@
   "history": "History",
   "nicknameValidationMessage": "Nickname has to be longer than 3 symbols",
   "nameValidationMessage": "Name has to be longer than 5 symbols",
-  "SurnameValidationMessage": "Surname has to be longer than 3 symbols",
+  "surnameValidationMessage": "Surname has to be longer than 3 symbols",
   "emailValidationMessage": "This is not a valid email",
   "passwordValidationMessage": "Password has to be longer than 8 symbols"
 }
