ui - отображение ошибок при входе

--- a/public/locales/en/registerPopup.json
+++ b/public/locales/en/registerPopup.json
@@ -5,8 +5,8 @@
   "password": "Password",
   "register": "Register",
   "or": "or",
-  "registerWithApple": "Register with Apple",
-  "registerWithGoogle": "Register with Google",
+  "registerWithApple": "Sign in with Apple",
+  "registerWithGoogle": "Sign in with Google",
   "agreement": "By registering, you accept the terms of the agreement",
   "alreadyRegistered": "Already registered?",
   "signIn": "Sign In",
