--- a/public/locales/en/signInPopup.json
+++ b/public/locales/en/signInPopup.json
@@ -4,8 +4,8 @@
   "password": "Password",
   "signIn": "Sign In",
   "or": "or",
-  "signInWithApple": "Sign In with Apple",
-  "signInWithGoogle": "Sign In with Google",
+  "signInWithApple": "Sign in with Apple",
+  "signInWithGoogle": "Sign in with Google",
   "notRegisteredYet": "Not registered yet?",
   "register": "Register",
   "emailValidation": "This is not a valid email",
