--- a/public/locales/ru/signInPopup.json
+++ b/public/locales/ru/signInPopup.json
@@ -8,6 +8,6 @@
   "signInWithGoogle": "Войти с Google",
   "notRegisteredYet": "Еще не зарегистрированы?",
   "register": "Зарегистрироваться",
-  "emailValidation": "Это не действительный адрес электронной почты",
-  "passwordValidation": "Пароль должен быть длиннее 8 символов"
+  "emailValidation": "Это не действительный адрес электронной почты. Попробуйте еще раз",
+  "passwordValidation": "Пароль должен быть длиннее 8 символов. Попробуйте еще раз"
 }
