--- a/public/locales/id/authErrors.json
+++ b/public/locales/id/authErrors.json
@@ -4,5 +4,6 @@
   "invalidEmail": "Alamat email tidak valid. Coba lagi",
   "emailAlreadyInUse": "Pengguna dengan email ini sudah terdaftar. Coba lagi",
   "networkRequestFailed": "Masalah internet. Coba lagi",
+  "unknownError": "Kesalahan! Coba lagi",
   "noError": ""
 }
