--- a/public/locales/ru/authErrors.json
+++ b/public/locales/ru/authErrors.json
@@ -4,5 +4,6 @@
   "invalidEmail": "Невалидный адрес электронной почты. Попробуйте еще раз",
   "emailAlreadyInUse": "Пользователь с такой электронной почтой уже зарегистрирован. Попробуйте еще раз",
   "networkRequestFailed": "Проблемы с интернетом. Попробуйте еще раз",
+  "unknownError": "Ошибка! Попробуйте еще раз",
   "noError": ""
 }
