--- a/public/locales/id/addPostPopup.json
+++ b/public/locales/id/addPostPopup.json
@@ -8,6 +8,8 @@
   "itIsDirty": "Ya",
   "itIsNotDirty": "Tidak",
   "publish": "Terbitkan",
+  "loading": "Memuat...",
+  "success": "Sukses!",
   "titleValidation": "Judul harus lebih dari 5 simbol",
   "commentValidation": "Komentar harus lebih dari 5 simbol"
 }
