--- a/public/locales/ru/addPostPopup.json
+++ b/public/locales/ru/addPostPopup.json
@@ -11,6 +11,7 @@
   "loading": "Загрузка...",
   "success": "Пост загружен!",
   "titleValidation": "Заголовок должен быть длиннее 5 символов",
-  "commentValidation": "Комментарий должен быть длиннее 5 символов"
+  "commentValidation": "Комментарий должен быть длиннее 5 символов",
+  "uploadPostError": "При загрузке поста произошла ошибка. Пожалуйста, попробуйте еще раз"
 
 }
