отображение ошибки при загрузке фото из firebase

--- a/public/locales/en/bigPostPopup.json
+++ b/public/locales/en/bigPostPopup.json
@@ -4,5 +4,6 @@
   "itIsDirty": "Yes",
   "itIsNotDirty": "No",
   "comments": "Comments",
-  "addAComment": "Add a comment..."
+  "addAComment": "Add a comment...",
+  "errorWhileLoadingPhoto": "Error while uploading a photo. Try opening the post again."
 }
