--- a/public/locales/id/404.json
+++ b/public/locales/id/404.json
@@ -1,3 +1,4 @@
 {
-  "pageNotFound": "Halaman tidak ditemukan"
+  "pageNotFound": "Halaman tidak ditemukan",
+  "toMain": "Kembali ke halaman utama"
 }
