--- a/public/locales/id/500.json
+++ b/public/locales/id/500.json
@@ -1,3 +1,4 @@
 {
-  "serverSideError": "Kesalahan sisi server"
+  "serverSideError": "Kesalahan sisi server",
+  "toMain": "Kembali ke halaman utama"
 }
