исправлен баг с отображением уведомления о неверифицированной почте

--- a/public/locales/id/registerPopup.json
+++ b/public/locales/id/registerPopup.json
@@ -7,8 +7,8 @@
   "registrationInProcess": "Pendaftaran...",
   "registrationSuccessful": "Pendaftaran berhasil!",
   "or": "atau",
-  "registerWithApple": "Daftar dengan Apple",
-  "registerWithGoogle": "Daftar dengan Google",
+  "registerWithApple": "Masuk dengan Apple",
+  "registerWithGoogle": "Masuk dengan Google",
   "agreement": "Dengan mendaftar, Anda menerima syarat dan ketentuan perjanjian",
   "alreadyRegistered": "Sudah terdaftar?",
   "signIn": "Masuk",
