--- a/public/locales/ru/registerPopup.json
+++ b/public/locales/ru/registerPopup.json
@@ -7,8 +7,8 @@
   "registrationInProcess": "Регистрация...",
   "registrationSuccessful": "Регистрация завершена!",
   "or": "или",
-  "registerWithApple": "Зарегистрироваться с Apple",
-  "registerWithGoogle": "Зарегистрироваться с Google",
+  "registerWithApple": "Войти с Apple",
+  "registerWithGoogle": "Войти с Google",
   "agreement": "Регистрируясь, вы принимаете условия соглашения",
   "alreadyRegistered": "Уже зарегистрированы?",
   "signIn": "Войти",
