код прокомментирован, подготовка к проду

--- a/public/locales/en/addPostPopup.json
+++ b/public/locales/en/addPostPopup.json
@@ -1,6 +1,6 @@
 {
   "addPhoto": "Add Photo",
-  "dragOrDrop": "Add or Drag and Drop a File Here",
+  "dragOrDrop": "Add a Photo Here",
   "title": "Title",
   "comment": "Comment on the Photo",
   "geo": "Geolocation",
