--- a/public/locales/id/addPostPopup.json
+++ b/public/locales/id/addPostPopup.json
@@ -1,6 +1,6 @@
 {
   "addPhoto": "Tambah Foto",
-  "dragOrDrop": "Tambahkan atau Seret dan Jatuhkan File di Sini",
+  "dragOrDrop": "Tambahkan foto di sini",
   "title": "Judul",
   "comment": "Komentar pada Foto",
   "geo": "Geolokasi",
