--- a/public/locales/id/mapPage.json
+++ b/public/locales/id/mapPage.json
@@ -12,7 +12,7 @@
   "aboutUsDesc3": "Temukan 'sisi hijau' dari Bali: Terhubung, kolaborasi dan berkontribusi dalam menciptakan Bali yang lebih bersih dan hijau",
   "aboutUsDesc4": "Temukan 'sisi hijau' dari Bali: Terhubung, kolaborasi dan berkontribusi dalam menciptakan Bali yang lebih bersih dan hijau",
   "recommendationTitle": "Tips",
-  "recommendationDesc": "Dapatkan tip eco yang sederhana dan mudah diterapkan dari ChatGPT",
+  "recommendationDesc": "Dapatkan tip ramah lingkungan yang sederhana dan mudah diterapkan yang dihasilkan oleh ChatGPT",
   "volunteersTitle": "Relawan",
   "volunteersDesc1": "Ini adalah beberapa teks tentang organisasi relawan. Dari mana mereka berasal, bagaimana mereka bekerja, siapa yang mereka bantu.",
   "volunteersDesc2": "Ini adalah beberapa teks tentang organisasi relawan. Dari mana mereka berasal, bagaimana mereka bekerja, siapa yang mereka bantu.",
