--- a/public/locales/ru/addPostPopup.json
+++ b/public/locales/ru/addPostPopup.json
@@ -1,6 +1,6 @@
 {
   "addPhoto": "Добавить фото",
-  "dragOrDrop": "Добавьте или перетащите файл сюда",
+  "dragOrDrop": "Добавьте файл сюда",
   "title": "Заголовок",
   "comment": "Комментарий к фото",
   "geo": "Геолокация",
