--- a/public/locales/ru/mapPage.json
+++ b/public/locales/ru/mapPage.json
@@ -12,7 +12,7 @@
   "aboutUsDesc3": "Откройте для себя 'зеленую сторону' Бали: Общайтесь, сотрудничайте и вносите свой вклад в создание более чистого и зеленого Бали",
   "aboutUsDesc4": "Откройте для себя 'зеленую сторону' Бали: Общайтесь, сотрудничайте и вносите свой вклад в создание более чистого и зеленого Бали",
   "recommendationTitle": "Советы",
-  "recommendationDesc": "Получите простой и легко применимый эко-совет от ChatGPT",
+  "recommendationDesc": "Получите простой и легко применимый эко-совет, сгенерированный ChatGPT",
   "volunteersTitle": "Волонтеры",
   "volunteersDesc1": "Здесь какой-то текст про волонтерские организации. Откуда они взялись, по какому принципу работают, кому помогают.",
   "volunteersDesc2": "Здесь какой-то текст про волонтерские организации. Откуда они взялись, по какому принципу работают, кому помогают.",
